--- a/style.css
+++ b/style.css
@@ -90,5 +90,102 @@ Player Bio
 /*------ 
 Media Query
 ------------------ */
+/*---------- Mobile Devices--------- */
 @media only screen and (max-width:688px) {
+
+
+    .container{
+        width: 100%;
+    }
+    .first-half{
+        display: flex;
+        flex-direction: column;
+        height: 1100px;
+        
+    }
+    .banner img{
+        width: 100%;
+        padding-bottom: 30px;
+        
+    }
+    .tournament-name{
+        padding-left:0px;
+    }
+    h1{
+        width: 50px;
+    }
+    /*------- Player Section-------- */
+.player-container{
+    width: 100%;
+}
+/* .player{
+    width: 300px;
+}
+.player-photo{
+    width: 280px;
+    height: 20px;
+} */
+.players{
+    flex-direction: column;
+    grid-template-columns: repeat(1,1fr);
+    margin-left: 15px;
+}
+}
+/*--------- Tablet devices-------- */
+@media only screen and (min-width:689px) and (max-width:992px) {
+    .container{
+        width: 100%;
+    }
+    .first-half{
+        display: flex;
+        flex-direction: column;
+        height: 1100px;
+        
+    }
+    .banner img{
+        padding-left: 0px;
+        padding-right: 0px;
+        padding-bottom: 30px;
+        
+    }
+    .tournament-name{
+        padding-left:0px;
+    }
+    h1{
+        width: 50px;
+    }
+      /*------- Player Section-------- */
+.player-container{
+    width: 100%;
+}
+.players{
+    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    margin-left: 0px;   
+}
+.player{
+    
+    margin-left: 0px;
+}
+.player-photo{
+    
+}
+.footer-container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-left: 0px;
+
+}
+#footer-image img{
+    width: 300px;
+    margin-right: 0px;
+    margin-left: 0px;  
+    justify-content: center;
+    padding-left: 200px;
+}
+.footer{
+    margin-left: 0px;
+}
 }
